import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

syntax = "proto3";
package account;

message LoginRequest {
    string tid=1;
    string password=2;
}
message RegisterRequest {
    string tid=1;
    string nick=2;
    string password=3;
    string sex=4;
    map<string,string> question = 5;
    string birthday=6;
    string email=7;
}
message CheckQuestionRequest {
    string tid=1;
    map<string,string> question = 2;
}
message ChangePasswordRequest {
    string tid=1;
    string new_pass=2;
}

message LoginResponse {
    string access_token=1;
    string refresh_token=2;
}
message DeleteAccount {
    string tid=1;
}

service AccountService {
    rpc register(RegisterRequest) returns (bool);
    rpc account_exists(LoginRequest) returns (bool);
    rpc checkQuestion(CheckQuestionRequest) returns (bool);
    rpc changePassword(ChangePasswordRequest) returns (bool);
    rpc deleteAccount(DeleteAccount) returns (bool)
}

