syntax = "proto3";
package blackList;
import "google/protobuf/wrappers.proto";
import "./common.proto";

message AppendToBlackList {
    string source=1;
    string target=2;
}
message DeleteBlackListRequest {
    string source=1;
    string target=2;
}
message GetBlackList {
    string source=1;
    optional int64 page=2;
}

service BlackListService {
    rpc appendToBlackList(AppendToBlackList) returns (google.protobuf.BoolValue);
    rpc deleteBlackList(DeleteBlackListRequest) returns (google.protobuf.BoolValue);
    rpc getBlackList(GetBlackList) returns (Profile);
}
