syntax = "proto3";
package repulation;
import "google/protobuf/wrappers.proto";

message ChangeReputationRequest {
    string tid=1;
    bool up=2;
}

service ReputationService {
    rpc change(ChangeReputationRequest) returns (google.protobuf.BoolValue);
}